bug fixes and markup edits

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <p>Find Unused Domains and Random Websites</p>
         <p style="font-size: 12px">WildWebSurfer is not responsible for the contents of these websites.</p>
         <p style="font-size: 12px">Due to their random nature, some may contain strange or graphic content. <b>You have been warned</b>.</p>
-        <p style="font-size: 12px">*Sometimes throws errors for working sites due to CORS.</p>
+        <p style="font-size: 12px">*Occasionally throws errors for working sites.</p>
 
       </div>
     </header>
