--- a/index.html
+++ b/index.html
@@ -5,18 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./public/img/favicon-32x32.png">
     <script defer type="module" src="./js/script.js"></script>
     <title>WildWebSurfer</title>
   </head>
   <body>
     <header class="header">
       <div class="brand">
-        <h1>WildWebSurfer</h1>
-        <p>Find Unused Domains and Random Websites</p>
-        <p style="font-size: 12px">WildWebSurfer is not responsible for the contents of these websites.</p>
-        <p style="font-size: 12px">Due to their random nature, some may contain strange or graphic content. <b>You have been warned</b>.</p>
-        <p style="font-size: 12px">*Occasionally throws errors for working sites.</p>
-
+        <a href="#" class="brand-wrap">
+          <img src="./public/img/logo.png" alt="logo">
+          <h1>WildWebSurfer</h1>
+        </a>
+        <p class="subtitle">Find Unused Domains and Random Websites</p>  
+        <div class="warning-wrap">
+          <p style="font-size: 12px">WildWebSurfer is not responsible for the contents of these websites.</p>
+          <p style="font-size: 12px">Due to their random nature, some may contain strange or graphic content. <b>You have been warned</b>.</p>
+          <p style="font-size: 12px; color: #b21717;">*Occasionally throws errors for working sites.</p>  
+        </div>
+        
       </div>
     </header>
 
