--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       name="description"
       content="Generate Random Urls and Find Domains for Sale"
     />
+    <meta name="google-site-verification" content="3_6tEj156O2SzArMJh2eb93sf01AcIdn9KcOZatnQyU" />
     <meta
       name="keywords"
       content="Random Websites, Domains for Sales, Domains, Random, Websites, Dev Tool, Web Dev Tool"
@@ -49,7 +50,11 @@
     </header>
 
     <main class="main">
-      <button class="site-generator-btn" id="site-generator">Generate</button>
+      <button class="site-generator-btn" id="site-generator">Generate</button><br>
+      <label class="toggle-label" for="delete-toggle">
+        Auto-Delete Broken URLs
+        <input type="checkbox" name="delete-toggle" id="delete-toggle">
+      </label>
       
       <div class="known-errors" id="error-box">
         <h3>Known Errors:</h3>
