added tagging system, fixed domain-sale-checker

--- a/index.html
+++ b/index.html
@@ -6,13 +6,17 @@
       name="description"
       content="Generate Random Urls and Find Domains for Sale"
     />
-    <meta name="google-site-verification" content="3_6tEj156O2SzArMJh2eb93sf01AcIdn9KcOZatnQyU" />
+    <meta
+      name="google-site-verification"
+      content="3_6tEj156O2SzArMJh2eb93sf01AcIdn9KcOZatnQyU"
+    />
     <meta
       name="keywords"
       content="Random Websites, Domains for Sales, Domains, Random, Websites, Dev Tool, Web Dev Tool"
     />
     <meta name="robots" content="index, follow" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+
     <meta name="language" content="English" />
     <meta name="author" content="Tyler J Kraft" />
     <meta charset="UTF-8" />
@@ -50,16 +54,16 @@
     </header>
 
     <main class="main">
-      <button class="site-generator-btn" id="site-generator">Generate</button><br>
+      <button class="site-generator-btn" id="site-generator">Generate</button
+      ><br />
       <label class="toggle-label" for="delete-toggle">
         Auto-Delete Broken URLs
-        <input type="checkbox" name="delete-toggle" id="delete-toggle">
+        <input type="checkbox" name="delete-toggle" id="delete-toggle" />
       </label>
-      
+
       <div class="known-errors" id="error-box">
         <h3>Known Errors:</h3>
         <p style="font-size: 12px; color: #b21717">
-
           -URL response tester broken on iOS devices.<br />
           -Domain-for-sale tester misses some sites
         </p>
@@ -67,5 +71,9 @@
 
       <div class="site-list" id="site-list"></div>
     </main>
+    <script
+      src="https://kit.fontawesome.com/9b0499a6d4.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
