--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
         <h3>Known Errors:</h3>
         <p style="font-size: 12px; color: #b21717">
           -URL response tester broken on iOS devices.<br />
-          -Domain-for-sale tester misses some sites
+          -Domain-for-sale occasionally incorrect<br />
+          -Tag Handler occasionally incorrect
         </p>
       </div>
 
