changes to tag arrays

--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
     <main class="main">
       <button class="site-generator-btn" id="site-generator">Generate</button
       ><br />
-      <button class="site-generator-btn" id="site-generator-ten">Generate x10</button
+      <button class="site-generator-btn" id="site-generator-ten">
+        Generate x10</button
       ><br />
       <label class="toggle-label" for="delete-toggle">
         Auto-Delete Broken URLs
@@ -72,12 +73,19 @@
           -URL response tester broken on iOS devices.<br />
           -Tag Handler occasionally incorrect<br />
           -HTTP detection often incorrect (Disabled for maintenance)<br />
-          -Random extension sites usually lead to 'Privacy not secure' error page<br />
+          -Random extension sites usually lead to 'Privacy not secure' error
+          page<br />
         </p>
       </div>
 
       <div class="site-list" id="site-list"></div>
     </main>
+    <footer class="footer" id="footer">
+      <div class="contact">
+        <h3>Questions or Comments?</h3>
+        <h4>Feel free to <a href="mailto:tkraft0203@gmail.com">email</a> me at:<br>tkraft0203@gmail.com</h4>
+      </div>
+    </footer>
     <script
       src="https://kit.fontawesome.com/9b0499a6d4.js"
       crossorigin="anonymous"
