improved tagging system, reduced clutter

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
           -URL response tester broken on iOS devices.<br />
           -Tag Handler occasionally incorrect<br />
           -HTTP detection often incorrect (Disabled for maintenance)<br />
+          -Tag Handler occasionally adds multiple of the same tag<br />
         </p>
       </div>
 
