hotfixes and style changes, added about section

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         Generate x10</button
       ><br />
       <label class="toggle-label" for="delete-toggle">
-        Auto-Delete Broken URLs
+        Auto-Delete Broken URLs (Recommended)
         <input type="checkbox" name="delete-toggle" id="delete-toggle" />
       </label>
       <label class="toggle-label" for="extension-toggle">
@@ -80,9 +80,20 @@
       <div class="site-list" id="site-list"></div>
     </main>
     <footer class="footer" id="footer">
-      <div class="contact">
+      
+      <div class="foot-container about">
+        <h3>How's it work?</h3>
+        <p class="semi-clear">
+          WildWebSurfer generates 'random' URLs,<br>
+          by pulling a random word from a large database of 170,000+ words.<br>
+          After creating a URL, we test the status, see if it's for sale<br>
+          and if available, we pull the description and keywords.<br>
+        </p>
+      </div>
+      <div class="foot-container contact">
         <h3>Questions or Comments?</h3>
-        <h4>Feel free to <a href="mailto:tkraft0203@gmail.com">email</a> me at:<br>tkraft0203@gmail.com</h4>
+        <h4>Feel free to email me at:<br><a href="mailto:tkraft0203@gmail.com">tkraft0203@gmail.com</a></h4>
+        <p class="semi-clear">If you'd like your site added to our list, just send an email!</p>
       </div>
     </footer>
     <script
