--- a/index.html
+++ b/index.html
@@ -1,104 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta name="title" content="WildWebSurfer" />
-    <meta
-      name="description"
-      content="Generate Random Urls and Find Domains for Sale"
-    />
-    <meta
-      name="google-site-verification"
-      content="3_6tEj156O2SzArMJh2eb93sf01AcIdn9KcOZatnQyU"
-    />
-    <meta
-      name="keywords"
-      content="Random Websites, Domains for Sales, Domains, Random, Websites, Dev Tool, Web Dev Tool"
-    />
-    <meta name="robots" content="index, follow" />
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-    <meta name="language" content="English" />
-    <meta name="author" content="Tyler J Kraft" />
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./public/css/style.css" />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./public/img/favicon-32x32.png"
-    />
-    <script defer type="module" src="./js/script.js"></script>
-    <title>WildWebSurfer</title>
-  </head>
-  <body>
-    <header class="header">
-      <div class="brand">
-        <a href="#" class="brand-wrap">
-          <img src="./public/img/logo.png" alt="logo" />
-          <h1>WildWebSurfer</h1>
-        </a>
-        <p class="subtitle">Find Unused Domains and Random Websites</p>
-        <div class="warning-wrap">
-          <p style="font-size: 12px">
-            WildWebSurfer is not responsible for the contents of these websites.
-          </p>
-          <p style="font-size: 12px">
-            Due to their random nature, some may contain strange or graphic
-            content.<br />
-            <b>You have been warned</b>.
-          </p>
-        </div>
-      </div>
-    </header>
+<head>
+  <meta name="title" content="WildWebSurfer" />
+  <meta name="description" content="Generate Random Urls and Find Domains for Sale" />
+  <meta name="google-site-verification" content="3_6tEj156O2SzArMJh2eb93sf01AcIdn9KcOZatnQyU" />
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-V0830VZ8HQ"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-    <main class="main">
-      <button class="site-generator-btn" id="site-generator">Generate</button
-      ><br />
-      <button class="site-generator-btn" id="site-generator-ten">
-        Generate x10</button
-      ><br />
-      <label class="toggle-label" for="delete-toggle">
-        Auto-Delete Broken URLs (Recommended)
-        <input type="checkbox" name="delete-toggle" id="delete-toggle" />
-      </label>
-      <label class="toggle-label" for="extension-toggle">
-        Random Extensions (eg. .net, .org)
-        <input type="checkbox" name="extension-toggle" id="extension-toggle" />
-      </label>
-      <div class="known-errors" id="error-box">
-        <h3>Known Errors:</h3>
-        <p style="font-size: 12px; color: #b21717">
-          -URL response tester broken on iOS devices.<br />
-          -Tag Handler occasionally incorrect<br />
-          -HTTP detection often incorrect (Disabled for maintenance)<br />
-          -Tag Handler occasionally adds multiple of the same tag<br />
+    gtag('config', 'G-V0830VZ8HQ');
+  </script>
+  <meta name="keywords"
+    content="Random Websites, Domains for Sales, Domains, Random, Websites, Dev Tool, Web Dev Tool" />
+  <meta name="robots" content="index, follow" />
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+
+  <meta name="language" content="English" />
+  <meta name="author" content="Tyler J Kraft" />
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./public/css/style.css" />
+  <link rel="icon" type="image/png" sizes="32x32" href="./public/img/favicon-32x32.png" />
+  <script defer type="module" src="./js/script.js"></script>
+  <title>WildWebSurfer</title>
+</head>
+
+<body>
+  <header class="header">
+    <div class="brand">
+      <a href="#" class="brand-wrap">
+        <img src="./public/img/logo.png" alt="logo" />
+        <h1>WildWebSurfer</h1>
+      </a>
+      <p class="subtitle">Find Unused Domains and Random Websites</p>
+      <div class="warning-wrap">
+        <p style="font-size: 12px">
+          WildWebSurfer is not responsible for the contents of these websites.
+        </p>
+        <p style="font-size: 12px">
+          Due to their random nature, some may contain strange or graphic
+          content.<br />
+          <b>You have been warned</b>.
         </p>
       </div>
+    </div>
+  </header>
 
-      <div class="site-list" id="site-list"></div>
-    </main>
-    <footer class="footer" id="footer">
-      
-      <div class="foot-container about">
-        <h3>How's it work?</h3>
-        <p class="semi-clear">
-          WildWebSurfer generates 'random' URLs,<br>
-          by pulling a random word from a large database of 170,000+ words.<br>
-          After creating a URL, we test the status, see if it's for sale<br>
-          and if available, we pull the description and keywords.<br>
-        </p>
-      </div>
-      <div class="foot-container contact">
-        <h3>Questions or Comments?</h3>
-        <h4>Feel free to email me at:<br><a href="mailto:tkraft0203@gmail.com">tkraft0203@gmail.com</a></h4>
-        <p class="semi-clear">If you'd like your site added to our list, just send an email!</p>
-      </div>
-    </footer>
-    <script
-      src="https://kit.fontawesome.com/9b0499a6d4.js"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+  <main class="main">
+    <button class="site-generator-btn" id="site-generator">Generate</button><br />
+    <button class="site-generator-btn" id="site-generator-ten">
+      Generate x10</button><br />
+    <label class="toggle-label" for="delete-toggle">
+      Auto-Delete Broken URLs (Recommended)
+      <input type="checkbox" name="delete-toggle" id="delete-toggle" />
+    </label>
+    <label class="toggle-label" for="extension-toggle">
+      Random Extensions (eg. .net, .org)
+      <input type="checkbox" name="extension-toggle" id="extension-toggle" />
+    </label>
+    <div class="known-errors" id="error-box">
+      <h3>Known Errors:</h3>
+      <p style="font-size: 12px; color: #b21717">
+        -URL response tester broken on iOS devices.<br />
+        -Tag Handler occasionally incorrect<br />
+        -HTTP detection often incorrect (Disabled for maintenance)<br />
+        -Tag Handler occasionally adds multiple of the same tag<br />
+      </p>
+    </div>
+
+    <div class="site-list" id="site-list"></div>
+  </main>
+  <footer class="footer" id="footer">
+
+    <div class="foot-container about">
+      <h3>How's it work?</h3>
+      <p class="semi-clear">
+        WildWebSurfer generates 'random' URLs,<br>
+        by pulling a random word from a large database of 170,000+ words.<br>
+        After creating a URL, we test the status, see if it's for sale<br>
+        and if available, we pull the description and keywords.<br>
+      </p>
+    </div>
+    <div class="foot-container contact">
+      <h3>Questions or Comments?</h3>
+      <h4>Feel free to email me at:<br><a href="mailto:tkraft0203@gmail.com">tkraft0203@gmail.com</a></h4>
+      <p class="semi-clear">If you'd like your site added to our list, just send an email!</p>
+    </div>
+  </footer>
+  <script src="https://kit.fontawesome.com/9b0499a6d4.js" crossorigin="anonymous"></script>
+</body>
+
 </html>
